Update Credit Card Fraud Detection (Jupyter Notebook).ipynb

--- a/Credit Card Fraud Detection (Jupyter Notebook).ipynb
+++ b/Credit Card Fraud Detection (Jupyter Notebook).ipynb
@@ -5,9 +5,8 @@
    "metadata": {},
    "source": [
     "# Credit Card Fraud Detection\n",
-    
-    "## 1. Importing Necessary Libraries \n",
     "\n",
+    "## 1. Importing Necessary Libraries\n"
    ]
   },
   {
@@ -61,9 +60,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. The Data Set\n",
-    "\n",
-    ]
+    "### 2. The Data Set\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -288,23 +286,7 @@
     "\n",
     "**Local Outlier Factor (LOF)**\n",
     "\n",
-    "The anomaly score of each sample is called Local Outlier Factor. It measures the local deviation of density of a \n",
-    "given sample with respect to its neighbors. It is local in that the anomaly score depends on how isolated the \n",
-    "object is with respect to the surrounding neighborhood.\n",
-    "\n",
-    "\n",
-    "**Isolation Forest Algorithm**\n",
-    "\n",
-    "The IsolationForest ‘isolates’ observations by randomly selecting a feature and then randomly selecting \n",
-    "a split value between the maximum and minimum values of the selected feature.\n",
-    "\n",
-    "Since recursive partitioning can be represented by a tree structure, the number of splittings required to \n",
-    "isolate a sample is equivalent to the path length from the root node to the terminating node.\n",
-    "\n",
-    "This path length, averaged over a forest of such random trees, is a measure of normality and our decision function.\n",
-    "\n",
-    "Random partitioning produces noticeably shorter paths for anomalies. Hence, when a forest of random trees \n",
-    "collectively produce shorter path lengths for particular samples, they are highly likely to be anomalies."
+    "**Isolation Forest Algorithm**"
    ]
   },
   {
